fix: add dark mode button

--- a/src/components/NavigationBar/styles.module.scss
+++ b/src/components/NavigationBar/styles.module.scss
@@ -80,6 +80,11 @@ nav {
   width: 30px;
 }
 
+.contactGroup {
+  gap: 24px;
+  display: flex;
+}
+
 .contactButton {
   display: flex;
   justify-content: center;
