--- a/src/index.scss
+++ b/src/index.scss
@@ -84,7 +84,7 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--bg-white);
-  // transition: background 10.4s;
+  transition: background 0.3s;
 }
 
 h1,
